# rust-ntex-mongodb-test

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/db/: db_mongodb.rs  mod.rs
src/errors/: error.rs
src/models/: mod.rs  ping_type.rs  students_model.rs
src/schemas/: mod.rs  students_sch.rs
src/services/: json.rs  mod.rs  name.rs  openapi.rs  ping.rs  student_service.rs
src/test/: test.rs
