[package]
name = "rust-ntex-mongodb"
authors = ["Kamal Jamali <kamal.jamali63@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.7", features = ["tokio"] }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde-json-core = "0.5.1"
json = "0.12"
utoipa = "4"
utoipa-swagger-ui = "5"
dotenv = "0.15.0"
chrono = { version = "0.4.6", features = ["serde"] }

futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]

